# devtoolhub

./: .gitignore  pyproject.toml  start.bat  tools.yaml
src/devtoolhub/: __main__.py  app.py  config.py  health.py  tui.py  window.py
src/devtoolhub/static/: style.css
src/devtoolhub/templates/: dashboard.html
